--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/css/App.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -15,9 +16,17 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" style="color: black; font-weight: bold;">마이페이지</a>
-                <a class="nav-link" href="/mypage/myInfor" style="color: black; font-weight: bold;">내정보</a>
-                <a class="nav-link" href="/mypage/giveList" style="color: black; font-weight: bold;">Give</a>
-                <a class="nav-link" href="/mypage/takeList" style="color: black; font-weight: bold;">Take</a>
+                <ul class="nav flex-column ml-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/mypage/myInfor" style="color: black; font-weight: bold;">내 정보</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/mypage/giveList" style="color: black; font-weight: bold;">Give</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/mypage/takeList" style="color: black; font-weight: bold;">Take</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
