--- a/src/main/resources/templates/content/board/detail.html
+++ b/src/main/resources/templates/content/board/detail.html
@@ -36,19 +36,21 @@
         <!-- Main -->
         <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
             <br>
-            <h2 class="text-center">책 제목</h2>
+            <h2 class="text-center"><span th:text="${book.title}"></span></h2>
             <hr>
 
             <div class="row">
                 <div class="col-md-6">
-                    <img src="이미지_경로" alt="책 이미지">
+                    <div th:each="image : ${book.images}" class="image-size" >
+                        <img th:src="${image.image_url}" th:alt="${book.title}">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card-body" style="padding-top: 50px; padding-bottom: 50px;">
-                        <p>저자: ${}</p>
-                        <p>출판사: ${}</p>
-                        <p>발행일자: ${}</p>
-                        <p>기부어: ${}</p>
+                        <p th:text="'저자: ' + ${book.author}"></p>
+                        <p th:text="'출판사: ' + ${book.publisher}"></p>
+                        <p th:text="'발행일자: ' + ${#dates.format(book.pubdate, 'yyyy-MM-dd')}"></p>
+                        <p th:text="'기부어: ' + ${book.boards.giver_user_id}"></p>
                     </div>
                 </div>
             </div>
@@ -61,14 +63,14 @@
                 <div class="custom-box">
                     <p>기부어의 한마디</p>
                     <div class="custom-text-box">
-                        <p>${} 기부어의 한 마디 어쩌구 저쩌구</p>
+                        <span th:text="${book.boards.message}"></span>
                     </div>
                 </div>
                 <br>
                 <div class="custom-box">
                     <p>책 소개</p>
                     <div class="custom-text-box">
-                        <p>${} 책 소개 어쩌구 저쩌구</p>
+                        <span th:text="${book.description}"></span>
                     </div>
                 </div>
             </div>
