--- a/src/main/resources/templates/content/user/main.html
+++ b/src/main/resources/templates/content/user/main.html
@@ -5,8 +5,13 @@
 <head>
     <title>main</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .image-size {
+            width: 200px;
+            height: 300px;
+        }
+    </style>
 </head>
-
 
 <body>
     <header th:replace="~{/header/header :: headerFragment}"></header>
@@ -40,48 +45,23 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-4" th:each="book : ${Books}">
-                        <a th:href="@{/board/detail/}">
-                            <img src="image_url" alt="이미지 1">
-                        </a>
+                        <!-- Todo: 이미지 크기 조절 -->
+                        <div th:each="image : ${book.images}" class="image-size" >
+                            <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
+                                <img th:src="${image.image_url}" th:alt="${book.title}">
+                            </a>
+                        </div>
                         <figcaption>
-                            <a th:href="@{/board/detail/}">
+                            <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
                                 <span th:text="${book.title}"></span>
                             </a>
-                            <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;"><span th:text="${book.transactions.status}"></span></div>
+                            <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;">
+                                <span th:text="${book.transactions.status}"></span>
+                            </div>
                         </figcaption>
                     </div>
                 </div>
             </form>
-
-            <!-- 참고 -->
-<!--            <form>-->
-<!--                <div class="row">-->
-<!--                    <th:forEach var="nctmember" items="${nctmemberList}">-->
-<!--                        <div class="col-md-3">-->
-<!--                            <div class="card mb-4">-->
-<!--                                <h5 class="card-title mt-2 text-center"><strong>${nctmember.name}</strong></h5>-->
-<!--                                <img src="${ctxPath}/resources/file_repo/${nctmember.image}" class="card-img-top" alt="${nctmember.name}">-->
-<!--                                <div class="card-body text-center">-->
-<!--                                    <a href="${ctxPath}/user/detail?memberId=${nctmember.memberId}" class="btn btn-dark btn-sm mt-2">상세보기</a>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </th:forEach>-->
-<!--                </div>-->
-<!--            </form>-->
-
-            <!-- 만들어뒀던 뷰 -->
-<!--            <form>-->
-<!--                <div class="form-row">-->
-<!--                    <div class="form-group col-md-4">-->
-<!--                        <a th:href="@{/board/detail/}">-->
-<!--                            <img src="image_url" alt="이미지 1">-->
-<!--                        </a>-->
-<!--                        <figcaption>플라워 문 <button class="btn btn-primary" style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px;">나눔중</button></figcaption>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </form>-->
-
 
         </main>
 
