--- a/src/main/resources/templates/content/user/main.html
+++ b/src/main/resources/templates/content/user/main.html
@@ -6,10 +6,15 @@
     <title>main</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        .image-size {
-            width: 200px;
+        .image-size img {
+            width: 300px;
             height: 300px;
         }
+
+        .figcaption-center {
+            text-align: center;
+        }
+
     </style>
 </head>
 
@@ -45,13 +50,13 @@
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-4" th:each="book : ${Books}">
-                        <!-- Todo: 이미지 크기 조절 -->
-                        <div th:each="image : ${book.images}" class="image-size" >
+                        <div th:each="image : ${book.images}" class="image-size" style="text-align: center;">
                             <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
-                                <img th:src="${image.image_url}" th:alt="${book.title}">
+                                <img th:src="${image.image_url}" th:alt="${book.title}" style="display: inline-block;">
                             </a>
                         </div>
-                        <figcaption>
+                        <div style="margin-bottom: 10px;"></div>
+                        <figcaption class="figcaption-center">
                             <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
                                 <span th:text="${book.title}"></span>
                             </a>
