feat: uploadService 기능 구현중

--- a/src/main/resources/templates/content/user/boardAddForm.html
+++ b/src/main/resources/templates/content/user/boardAddForm.html
@@ -16,7 +16,7 @@
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
         <!-- main 나눔글 작성하기-->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px">
         <div class = "container">
             <h2 class="mb-3 mt-3 text-center">나눔하겠습니다!</h2>
             <!-- 검색창 -->
