--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer bg-light fixed-bottom py-1" th:fragment="footerFragment">
  <div class="footer-container container text-center">
-    <span>Copyright © Team Solar Power. All rights reserved.</span>
+    <span class="text-muted">Copyright © Team Solar Power. All rights reserved.</span>
  </div>
 </footer>
