--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
         <h2 class="text-white">LOGIN</h2>
         <p class="text-white-50 mt-2 mb-3">서비스를 사용하려면 로그인을 해주세요</p>
         <div class = "mb-2">
-          <form action="/login" method="POST">
+          <form action="/user/login" method="POST">
             <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
             <div class="mb-3">
               <label class="form-label text-white">Email</label>
@@ -39,6 +39,12 @@
     </div>
   </div>
 </section>
+<!-- Thymeleaf를 사용하는 경우 아래와 같이 에러 메시지를 표시 -->
+<script th:if="${error}" th:inline="javascript">
+  /*<![CDATA[*/
+  alert([[${error}]]);
+  /*]]>*/
+</script>
 </body>
 
 </html>
