--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,7 +16,7 @@
         <p class="mt-2 mb-2">서비스 사용을 위한 회원 가입</p>
 
         <div class = "mb-2">
-          <form th:action="@{/user}" method="POST">
+          <form th:action="@{/user/signup}" method="POST">
             <!-- 토큰을 추가하여 CSRF 공격 방지 -->
             <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
 
@@ -112,8 +112,6 @@
 </body>
 </html>
 
-<!--<script src="/resources/static/js/registerCheck.js"></script>-->
-<!--<script th:src="@{/js/registerCheck.js}"></script>-->
 <script th:src="@{/js/member.js}"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
