--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -18,13 +18,13 @@
                 <a class="nav-link" href="#" style="color: black; font-weight: bold;">마이페이지</a>
                 <ul class="nav flex-column ml-3">
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/myInfor" style="color: black; font-weight: bold;">내 정보</a>
+                        <a class="nav-link" href="/user/mypage/myinfor" style="color: black; font-weight: bold;">내 정보</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/giveList" style="color: black; font-weight: bold;">Give</a>
+                        <a class="nav-link" href="/user/mypage/givelist" style="color: black; font-weight: bold;">Give</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/mypage/takeList" style="color: black; font-weight: bold;">Take</a>
+                        <a class="nav-link" href="/user/mypage/takelist" style="color: black; font-weight: bold;">Take</a>
                     </li>
                 </ul>
             </li>
