--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -29,6 +29,8 @@
             padding: 5px;
             margin: 5px;
         }
+
+
     </style>
 </head>
 <body>
@@ -42,25 +44,26 @@
             <br>
             <h2 class="text-center">나눔한 책 현황</h2>
             <hr>
-            <div class="row">
+            <div class="row" th:each="board : ${boards}">
                 <div class="col-12">
                     <div class="custom-text-box">
-                        <div class="row">
+                        <div class="row" th:each="book : ${board.booksList}">
                             <div class="col-md-4">
                                 <div class="card mb-3">
-                                    <img src="이미지_경로" alt="책 이미지" class="card-img-top">
+                                    <!-- 첫 번째 이미지에만 액세스 -->
+                                    <img class="card-img-top" th:src="${book.images[0].image_url}" alt="" width="200" height="300">
                                 </div>
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-4">
-                                            <h5 class="card-title">책 제목</h5>
-                                            <p>출판사: ${}</p>
+                                            <h5 class="card-title" th:text="${book.title}">책 제목</h5>
+                                            <p th:text="'출판사: ' + ${book.publisher}">출판사: 출판사명</p>
                                         </div>
                                         <div class="col-md-4">
-                                            <p>글 올린 날짜: ${}</p>
-                                            <p>책 등급: ${}</p>
+                                            <p th:text="'글 올린 날짜: ' + ${book.pubdate}">글 올린 날짜: 날짜</p>
+                                            <p th:text="'책 등급: ' + ${book.grade}">책 등급: 등급</p>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="status-box">
@@ -68,39 +71,6 @@
                                             </div>
                                             <div class="status-box">
                                                 <p>삭제 하기</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="custom-text-box">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="card mb-3">
-                                    <img src="이미지_경로" alt="책 이미지" class="card-img-top">
-                                </div>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <h5 class="card-title">책 제목</h5>
-                                            <p>출판사: ${}</p>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <p>글 올린 날짜: ${}</p>
-                                            <p>책 등급: ${}</p>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="status-box">
-                                                <p>나눔 완료</p>
                                             </div>
                                         </div>
                                     </div>
