--- a/src/main/resources/templates/content/user/main.html
+++ b/src/main/resources/templates/content/user/main.html
@@ -51,13 +51,13 @@
                 <div class="form-row">
                     <div class="form-group col-md-4" th:each="book : ${Books}">
                         <div th:with="firstImage=${book.images[0]}" class="image-size" style="text-align: center;">
-                            <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
-                                <img th:src="${firstImage.image_url}" th:alt="${book.title}" style="display: inline-block;">
+                            <a th:href="@{/board/detail/{bookId}(bookId=${book.booksId})}">
+                                <img th:src="${firstImage.imagesUrl}" th:alt="${book.title}" style="display: inline-block;">
                             </a>
                         </div>
                         <div style="margin-bottom: 10px;"></div>
                         <figcaption class="figcaption-center">
-                            <a th:href="@{/board/detail/{bookId}(bookId=${book.book_id})}">
+                            <a th:href="@{/board/detail/{bookId}(bookId=${book.booksId})}">
                                 <span th:text="${book.title}"></span>
                             </a>
                             <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;">
